<resources>
    <string name="app_name">MusicMaps</string>

    <string name="title">MusicMaps</string>
    <string name="title_fontfamily">sans-serif-smallcaps</string>
    <string name="tagline">Find Local Shows</string>
    <string name="tagline_fontfamily">casual</string>

    <string name="view_shows">View Events Near You</string>
    <string name="map_button">Map</string>
    <string name="search_button">Search</string>


    <string name="cant_find">Don\'t See An Artist, Show or Venue?</string>
    <string name="add_artist_button">Add Artist</string>
    <string name="add_show_button">Add Show</string>
    <string name="add_venue_button">Add Venue</string>

    <string name="settings_button">Settings</string>
    <string name="about_button">About</string>

    <string name="add_artist_title">Add An Artist</string>
    <string name="add_show_title">Add A Show</string>
    <string name="add_venue_title">Add A Venue</string>

    <string name="add_artist__name">Name</string>
    <string name="add_artist__genre">Genre</string>
    <string name="add_artist__members">Number of Members</string>
    <string name="add_artist__website">Website</string>
    <string name="add_artist__picture_url">Picture URL</string>
    <string name="add_artist__town">Town</string>
    <string name="add_artist__state">State</string>
    <string name="add_artist__zip">Zip Code</string>

    <string name="add_show__name">Name</string>
    <string name="add_show__artists">Artists Performing (separated by commas)</string>
    <string name="add_show__venue">Venue</string>
    <string name="add_show__website">Website</string>
    <string name="add_show__picture_url">Picture URL</string>
    <string name="add_show__start">Start Date/Time</string>
    <string name="add_show__end">End Date/Time</string>

    <string name="add_venue__name">Name</string>
    <string name="add_venue__website">Website</string>
    <string name="add_venue__picture_url">Picture URL</string>
    <string name="add_venue__Address">Street Address</string>
    <string name="add_venue__Town">Town</string>
    <string name="add_venue__State">State</string>
    <string name="add_venue__Zip">Zip Code</string>

    <string name="submit_button">Submit</string>
    <string name="clear_button">Clear</string>
    <string name="go_back_button">Go Back</string>

    <string name="about_activity_string_1">MusicMaps is an Android application for anyone who wants to find a concert by location. Whether a concert at an area that seats 25,000 people
    or a concert for small band at a restaurant, MusicMaps is right for you.  Use a map to find venues around you and the show happening at them, or search by putting in parameters.</string>

    <string name="about_activity_string_2">All of the artists, shows, and venues, with the exception of those posts that are in gold, are put in by other uses and are dependent on the
    accuracy of those users.  MusicMaps does not take any resonsibility for incorrect or misleading data that is displayed through our app.</string>

    <string name="about_activity_string_3">MusicMaps is developed by Joe Menduni for his Comp 39000 Mobile Development final project.  The data is the app is likely made up.</string>

    <string name="settings_name">Your Name</string>
    <string name="settings_musician">Are You A Musician?</string>
    <string name="settings_location">Use My Location</string>
    <string name="settings_range">How far away from your current location should be displayed (miles)?</string>
    <string name="settings_zipcode">Enter a default zip code:</string>
    <string name="settings_zipcode_prompt">Or leave blank if you want the default location to always be your current location</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="title_activity_map">Map</string>
    <string name="zipCodeRegex">^[0-9]{5}(?:-[0-9]{4})?$</string>
    <string name="title_activity_search_maps">Map</string>


</resources>
