<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joemenduni.musicmaps.MainActivity"
    android:background="@drawable/show_background">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_text"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/title_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/title_fontfamily"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tagline_text"
        android:textSize="@dimen/tagline_size"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTagLine"
        android:fontFamily="@string/tagline_fontfamily"
        android:textStyle="normal|bold"
        android:textAllCaps="false" />

    <Button
        android:text="@string/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:id="@+id/button4"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/about_activity_string_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/tagline_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/about_activity_string_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView20"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView19"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/about_activity_string_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:id="@+id/textView16"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true" />


</RelativeLayout>
