<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_artist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joemenduni.musicmaps.AddShowActivity"
    tools:background="@android:color/darker_gray">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/showName"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/add_artist__name"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView2"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/add_show__venue"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textStyle="normal|bold"
        android:layout_below="@+id/showName"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/add_artist__website"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textStyle="normal|bold"
        android:layout_below="@+id/showVenue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/showWebsite"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/add_artist__picture_url"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textStyle="normal|bold"
        android:layout_below="@+id/showWebsite"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:id="@+id/showPictureURL" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:ems="10"
            android:id="@+id/showArtists"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textLongMessage" />

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/startDateTime"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:inputType="datetime"
        android:layout_width="150dp" />

    <TextView
        android:text="@string/add_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/page_title_size"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:id="@+id/showVenue"
        android:layout_width="200sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="addShow"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/button3" />

    <TextView
        android:text="@string/add_show__artists"
        android:textSize="16.5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textStyle="normal|bold"
        android:layout_below="@+id/showPictureURL"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/endDateTime"
        android:inputType="datetime"
        android:layout_width="150dp"
        android:layout_below="@+id/textView13"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/add_show__start"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textStyle="normal|bold"
        android:layout_below="@+id/showArtists"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <TextView
            android:text="@string/add_show__end"
            android:textSize="@dimen/field_label_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:textStyle="normal|bold"
        android:layout_alignBaseline="@+id/textView14"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignEnd="@+id/textView11" />

    <Button
        android:text="@string/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="clearFields"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="goBack"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView10" />


</RelativeLayout>
