<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_artist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joemenduni.musicmaps.AddVenueActivity"
    tools:background="@android:color/darker_gray">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/venueName"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/add_artist__name"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView2"
        android:textStyle="normal|bold" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/venueWebsite"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/add_artist__picture_url"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textStyle="normal|bold"
        android:layout_below="@+id/venueWebsite"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:id="@+id/venuePictureURL" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textLongMessage"
        android:id="@+id/venueStreetAddress" />

    <TextView
        android:text="@string/add_venue_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/page_title_size"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="addShow"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/button3" />

    <TextView
        android:text="@string/add_venue__Address"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textStyle="normal|bold"
        android:layout_below="@+id/venuePictureURL"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/add_artist__website"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textStyle="normal|bold"
        android:layout_below="@+id/venueName"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/add_venue__Town"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:textStyle="normal|bold"
        android:layout_below="@id/venueStreetAddress"
        android:layout_alignParentStart="true"
   />

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage"
        android:id="@+id/venueTown"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_width="225dp" />

    <TextView
        android:text="@string/add_artist__state"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textStyle="normal|bold"
        android:layout_below="@+id/venueStreetAddress"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp" />

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage"
        android:id="@+id/venueState"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView17"
        android:layout_width="100dp"
        android:layout_below="@+id/textView17" />

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/venueZipCode"
        android:layout_width="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_alignParentStart="true"
        android:inputType="number" />

    <TextView
        android:text="@string/add_artist__zip"
        android:textSize="@dimen/field_label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:textStyle="normal|bold"
        android:layout_below="@+id/venueTown"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="clearFields"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="goBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
