<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joemenduni.musicmaps.SearchActivity"
    android:background="@drawable/show_background">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_text"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/title_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/title_fontfamily"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tagline_text"
        android:textSize="@dimen/tagline_size"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTagLine"
        android:fontFamily="@string/tagline_fontfamily"
        android:textStyle="normal|bold"
        android:textAllCaps="false" />

    <TextView
        android:text="Enter a title of a show or an artist name:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/tagline_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/searchTitle"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Enter a zip code to search nearby:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView32"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_below="@+id/searchTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView31"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:layout_alignTop="@+id/searchSeek"
        android:layout_toEndOf="@+id/title_text" />

    <SeekBar
        android:layout_height="wrap_content"
        android:id="@+id/searchSeek"
        android:layout_width="250dp"
        android:progress="50"
        android:max="100"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView30"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:layout_alignTop="@+id/searchSeek"
        android:layout_alignStart="@+id/searchZip"
        android:layout_marginStart="7dp" />

    <TextView
        android:text="How far away should we search?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView28"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_above="@+id/searchSeek"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="7dp" />

    <Button
        android:text="@string/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="clearFields"
        android:layout_below="@+id/textView31"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp" />

    <Button
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="addVenue"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/button3" />

    <Button
        android:text="@string/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="goBack"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignStart="@+id/searchZip" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/searchZip"
        android:layout_marginStart="7dp"
        android:layout_below="@+id/textView32"
        android:layout_alignParentStart="true" />


</RelativeLayout>
